<resources>
    <string name="app_name">QuizApp</string>
    <string name="question1">Which of theese are yeasts or bacteria  used in brewing? Select all that apply.</string>
    <string name="q1a1">Saccharomyces cerevisiae</string>
    <string name="q1a2">Lactobacillus</string>
    <string name="q1a3">Escherichia coli</string>
    <string name="q1a4">Brettanomyces bruxellensis</string>
    <string name="q1a5">Salmonella</string>
    <string name="question2">What does IPA stand for?</string>
    <string name="q2a1">Italian Pale Ale</string>
    <string name="q2a2">Indian Pale Ale</string>
    <string name="q2a3">Irish Pale Ale</string>
    <string name="q2a4">Irrelevant Pale Ale</string>
    <string name="q2a5">Improbable Pale Ale</string>
    <string name="question3">What was the name of the most famous beer journalist, AKA \"The Beer Hunter\"</string>
    <string name="q3a1">Jack Michaelson</string>
    <string name="q3a2">John Malkovich</string>
    <string name="q3a3">Jack Johnson</string>
    <string name="q3a4">Michael Jackson</string>
    <string name="q3a5">John Jackson</string>
    <string name="question4">Type in the acronym the identifies the bitterness of beer"</string>
    <string name="question5">Which of these are base malts. Select all that apply?</string>
    <string name="q5a1">Roasted barely</string>
    <string name="q5a2">Maris Otter</string>
    <string name="q5a3">Pilsen malt</string>
    <string name="q5a4">Munich malt</string>
    <string name="q5a5">Crystal malt</string>
    <string name="question6">Which of these are traditionally considered noble hops? Select all that apply</string>
    <string name="q6a1">Amarillo</string>
    <string name="q6a2">Tettnanger</string>
    <string name="q6a3">Citra</string>
    <string name="q6a4">Nelson Sauvin</string>
    <string name="q6a5">Galaxy</string>
    <string name="question7">Type in the chemical formula of the molecule that gives beer its fizziness</string>
    <string name="question8">What\'s beer mainly made of?</string>
    <string name="q8a1">Malt</string>
    <string name="q8a2">Hops</string>
    <string name="q8a3">Yeast</string>
    <string name="q8a4">Water</string>
    <string name="q8a5">Magic</string>
    <string name="question9">What\'s the name of the process of storing beer in a cold environment for several weeks before botteling//consumption?</string>
    <string name="q9a1">Mashing in</string>
    <string name="q9a2">Mashing out</string>
    <string name="q9a3">Lautering</string>
    <string name="q9a4">Lagering</string>
    <string name="q9a5">Waiting</string>
    <string name="question10">Type in the name of the religious order whose monasteries are famous brewries</string>
    <string name="click_reset">(Click Reset to start over)</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="type_answer">Type answer here</string>
    <string name="done">Done!</string>
    <string name="enter">Enter</string>
    <string name="start">Start</string>
    <string name="press_start">Press start</string>
    <string name="to_begin_the_quiz">to begin the quiz!</string>
    <string name="question">Question</string>
</resources>
